--- a/LalithaStores/pom.xml
+++ b/LalithaStores/pom.xml
@@ -126,6 +126,14 @@
 			<artifactId>spring-orm</artifactId>
 			<version>${springframework.version}</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs -->
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-taglibs</artifactId>
+    <version>4.2.0.RELEASE</version>
+</dependency>
+		
 		<!-- String and file utilities -->
 		<dependency>
 			<groupId>commons-io</groupId>
